2007-11-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:
	* generic/tclInt.h:
	* unix/tclUnixInit.c:
	* win/tclWin32Dll.c: restore simpler behaviour for stack checking,
	not adaptive to stack size changes after a thread is
	launched. Consensus is that "nobody does that", and so it is not
	worth the cost.

2007-11-10  Kevin Kenny  <kennykb@acm.org>

	* win/tclWin32Dll.c: Rewrote the Windows stack checking algorithm
	to use information from VirtualQuery to determine the bound of the
	stack.  This change fixes a bug where the guard page of the stack
	was never restored after an overflow.  It also eliminates a nasty
	piece of assembly code for structured exception handling on
	mingw.  It introduces an assumption that the stack is a single
	memory arena returned from VirtualAlloc, but the code in MSVCRT
	makes the same assumption, so it should be fairly safe.
	
2007-11-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:
	* generic/tclInt.h:
	* unix/tclUnixInit.c:
	* unix/tclUnixPort.h:
	* win/tclWin32Dll.c: modify the stack checking algorithm to
	recheck in case of failure. The working assumptions are now that
	(a) a thread's stack is never moved, and (b) a thread's stack can
	grow but not shrink. Port to windows - could be more efficient,
	but is already cheaper than it was.
	
2007-11-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclResult.c (ResetObjResult): new shortcut.
	
	* generic/tclAsync.c:
	* generic/tclBasic.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclUnixInit.c:
	* generic/tclUnixPort.h: new fields in interp (ekeko!) to cache
	TSD data that is accessed at each command invocation, access
	macros to replace Tcl_AsyncReady and TclpCheckStackSpace by much
	faster variants [Patch 1829248]

2007-11-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclInt.decls, generic/tclIntDecls.h: Use unsigned char for
	* generic/tclExecute.c, generic/tclUtil.c:     TclByteArrayMatch